# opencv-android-template

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/gaval/tutorial/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/gaval/tutorial/: FramesHarvester.java  HelloOpenCvActivity.java  MainActivity.java
app/src/main/res/layout/: activity_helloopencv.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/gaval/tutorial/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
